// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders anchor links unchanged 1`] = `
<div>
  <a
    href="#test"
  >
    Test
  </a>
</div>
`;

exports[`renders real links unchanged 1`] = `
<div>
  <a
    href="https://www.google.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Test
  </a>
</div>
`;

exports[`renders slash links unchanged 1`] = `
<div>
  <a
    href="/test"
  >
    Test
  </a>
</div>
`;
